--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -26,7 +26,8 @@
       transition: opacity 1.5s ease-in-out, transform 4s ease-in-out;
       background: black;
       backface-visibility: hidden;
-      display: none; /* 👈 hidden until password success */
+      display: none; /* 🔒 Hidden until password success */
+      visibility: hidden; /* Prevent flash of content */
     }
 
     .active {
@@ -34,6 +35,7 @@
       transform: rotateY(0deg);
       z-index: 2;
       display: block;
+      visibility: visible;
     }
 
     iframe {
@@ -41,6 +43,7 @@
       height: 100%;
       border: none;
       background: black;
+      visibility: hidden; /* 🔒 Hide iframe until password OK */
     }
 
     header {
@@ -63,7 +66,7 @@
     .pw-modal-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0, 0, 0, 0.95);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -80,7 +83,6 @@
       color: #00ffd1;
       text-align: center;
       border: 2px solid rgba(0, 255, 204, 0.08);
-      font-family: Arial, sans-serif;
     }
 
     .pw-modal h2 {
@@ -138,7 +140,6 @@
     }
   </style>
 
-  <!-- 🔒 Password Protection -->
   <script>
     const correctPassword = "Pharma@2025";
     const storageKey = "auth_pharma";
@@ -206,102 +207,109 @@
 
     window.addEventListener("DOMContentLoaded", async () => {
       await authenticate();
-      // ✅ Reveal dashboard after successful authentication
-      document.querySelectorAll(".screen").forEach(el => el.style.display = "block");
+      // ✅ Reveal dashboard only after successful authentication
+      document.querySelectorAll(".screen").forEach(el => {
+        el.style.display = "block";
+        el.style.visibility = "visible";
+      });
+      document.querySelectorAll("iframe").forEach(el => {
+        el.style.visibility = "visible";
+      });
+      initializeDashboard();
     });
+
+    function initializeDashboard() {
+      const pharmaScreen = document.getElementById("pharmaScreen");
+      const bannerScreen = document.getElementById("bannerScreen");
+      const overlayTitle = document.getElementById("overlayTitle");
+      const pharmaFrame = document.getElementById("pharmaFrame");
+      const bannerFrame = document.getElementById("bannerFrame");
+
+      // ✅ Load only after auth success
+      pharmaFrame.src = "Pharma_Telesales_Statistics.html?nocache=" + new Date().getTime();
+      bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
+
+      function updateHeader() {
+        const now = new Date();
+        const formattedDate = now.toLocaleString("en-GB", {
+          day: "2-digit",
+          month: "long",
+          year: "numeric",
+          hour: "2-digit",
+          minute: "2-digit",
+          second: "2-digit"
+        }).replace(",", "");
+
+        const formattedTime = formattedDate.replace(
+          /\b([A-Za-z]+)\b/,
+          (match) => match.toUpperCase()
+        );
+
+        overlayTitle.textContent = `PHARMA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
+      }
+
+      setInterval(updateHeader, 1000);
+      updateHeader();
+
+      const pharmaDuration = 120000; // 2 minutes
+      const bannerDuration = 10000;  // 10 seconds
+      let showingBanner = false;
+
+      function switchScreens() {
+        if (showingBanner) {
+          bannerScreen.classList.remove("active");
+          pharmaScreen.classList.add("active");
+          showingBanner = false;
+          localStorage.setItem("lastFlip_pharma", Date.now());
+          setTimeout(switchScreens, pharmaDuration);
+        } else {
+          pharmaScreen.classList.remove("active");
+          bannerScreen.classList.add("active");
+          showingBanner = true;
+          localStorage.setItem("lastFlip_pharma", Date.now());
+          setTimeout(switchScreens, bannerDuration);
+        }
+      }
+
+      const lastFlip = localStorage.getItem("lastFlip_pharma");
+      if (lastFlip) {
+        const elapsed = Date.now() - lastFlip;
+        const totalCycle = pharmaDuration + bannerDuration;
+        const modTime = elapsed % totalCycle;
+
+        if (modTime < pharmaDuration) {
+          pharmaScreen.classList.add("active");
+          bannerScreen.classList.remove("active");
+          showingBanner = false;
+          setTimeout(switchScreens, pharmaDuration - modTime);
+        } else {
+          pharmaScreen.classList.remove("active");
+          bannerScreen.classList.add("active");
+          showingBanner = true;
+          setTimeout(switchScreens, totalCycle - modTime);
+        }
+      } else {
+        pharmaScreen.classList.add("active");
+        bannerScreen.classList.remove("active");
+        showingBanner = false;
+        localStorage.setItem("lastFlip_pharma", Date.now());
+        setTimeout(switchScreens, pharmaDuration);
+      }
+    }
   </script>
 </head>
 
 <body>
-
-  <!-- Pharma dashboard -->
-  <div class="screen active" id="pharmaScreen">
+  <!-- Pharma dashboard (hidden until auth) -->
+  <div class="screen" id="pharmaScreen">
     <iframe id="pharmaFrame"></iframe>
   </div>
 
-  <!-- Banner screen -->
+  <!-- Banner screen (hidden until auth) -->
   <div class="screen" id="bannerScreen">
     <iframe id="bannerFrame"></iframe>
     <header id="overlayTitle"></header>
   </div>
-
-  <script>
-    const pharmaScreen = document.getElementById("pharmaScreen");
-    const bannerScreen = document.getElementById("bannerScreen");
-    const overlayTitle = document.getElementById("overlayTitle");
-    const pharmaFrame = document.getElementById("pharmaFrame");
-    const bannerFrame = document.getElementById("bannerFrame");
-
-    pharmaFrame.src = "Pharma_Telesales_Statistics.html?nocache=" + new Date().getTime();
-    bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
-
-    function updateHeader() {
-      const now = new Date();
-      const formattedDate = now.toLocaleString("en-GB", {
-        day: "2-digit",
-        month: "long",
-        year: "numeric",
-        hour: "2-digit",
-        minute: "2-digit",
-        second: "2-digit"
-      }).replace(",", "");
-
-      const formattedTime = formattedDate.replace(
-        /\b([A-Za-z]+)\b/,
-        (match) => match.toUpperCase()
-      );
-
-      overlayTitle.textContent = `PHARMA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
-    }
-
-    setInterval(updateHeader, 1000);
-    updateHeader();
-
-    const pharmaDuration = 120000; // 2 minutes
-    const bannerDuration = 10000;  // 10 seconds
-    let showingBanner = false;
-
-    function switchScreens() {
-      if (showingBanner) {
-        bannerScreen.classList.remove("active");
-        pharmaScreen.classList.add("active");
-        showingBanner = false;
-        localStorage.setItem("lastFlip_pharma", Date.now());
-        setTimeout(switchScreens, pharmaDuration);
-      } else {
-        pharmaScreen.classList.remove("active");
-        bannerScreen.classList.add("active");
-        showingBanner = true;
-        localStorage.setItem("lastFlip_pharma", Date.now());
-        setTimeout(switchScreens, bannerDuration);
-      }
-    }
-
-    const lastFlip = localStorage.getItem("lastFlip_pharma");
-    if (lastFlip) {
-      const elapsed = Date.now() - lastFlip;
-      const totalCycle = pharmaDuration + bannerDuration;
-      const modTime = elapsed % totalCycle;
-
-      if (modTime < pharmaDuration) {
-        pharmaScreen.classList.add("active");
-        bannerScreen.classList.remove("active");
-        showingBanner = false;
-        setTimeout(switchScreens, pharmaDuration - modTime);
-      } else {
-        pharmaScreen.classList.remove("active");
-        bannerScreen.classList.add("active");
-        showingBanner = true;
-        setTimeout(switchScreens, totalCycle - modTime);
-      }
-    } else {
-      pharmaScreen.classList.add("active");
-      bannerScreen.classList.remove("active");
-      showingBanner = false;
-      localStorage.setItem("lastFlip_pharma", Date.now());
-      setTimeout(switchScreens, pharmaDuration);
-    }
-  </script>
-
 </body>
 </html>
+
